Fix blank space after PDB list on small screens
Refs pombase/website#2008

--- a/src/app/pdb-structure-viewer/pdb-structure-viewer.component.css
+++ b/src/app/pdb-structure-viewer/pdb-structure-viewer.component.css
@@ -25,7 +25,7 @@ table {
 
 @media (max-width: 1299px) {
   .pdb-table-container {
-    height: 175px;
+    max-height: 175px;
   }
 }
 
